# MemManagerCLI

./: .gitmodules  CMakeLists.txt  main.c
